--- a/client/package.json
+++ b/client/package.json
@@ -3,24 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.3.1",
+    "@aws-sdk/client-transcribe-streaming": "^3.427.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^5.3.11",
+    "p-event": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-
-    
-    "@aws-amplify/ui-react": "^5.3.1",
-    "@aws-sdk/client-transcribe-streaming": "^3.427.0",
-    "aws-amplify": "^5.3.11",
-    "p-event": "^4.2.0",
-
     "socket.io-client": "^4.7.5",
-    "stream-browserify": "^3.0.0"
-
-
+    "stream-browserify": "^3.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,5 +44,8 @@
   "browser": {
     "buffer": "buffer",
     "stream": "stream-browserify"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
